# cuda-lemmatizer-cpp

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  build_output.txt
.cmake/api/v1/reply/: cache-v2-9ae608125d76df20925f.json  cache-v2-aac443c8aab37f15e874.json  cmakeFiles-v1-2434d548391da02794eb.json  cmakeFiles-v1-499aa983baf0fac07273.json  codemodel-v2-6fdda2babc0d3dd29678.json  directory-_deps.benchmark-build-Debug-8aa0fa23823f9e9c0f5d.json  directory-_deps.benchmark-build.src-Debug-f53b4fa66aba6418e6cd.json  directory-_deps.cccl-build-Debug-9b88d21d51e051c96f5a.json  directory-_deps.cccl-build.cub-Debug-dc0a42e0fbdb2a18125b.json  directory-_deps.cccl-build.libcudacxx-Debug-2f06edee460a838e316d.json  directory-_deps.cccl-build.thrust-Debug-fc10de251081b4feacfb.json  directory-_deps.cuco-build-Debug-90a88918e46e6628dda3.json  directory-_deps.cudf-build-Debug-bc5570dbf5daf9d62f66.json  directory-_deps.flatbuffers-build-Debug-4af7c3a94438fe01c9fd.json  directory-_deps.gtest-build-Debug-3e5d36a62dda1d8503a8.json  directory-_deps.gtest-build.googlemock-Debug-1f06eb580d45c244e0b3.json  directory-_deps.gtest-build.googletest-Debug-cb2c7c9462e998577b60.json  directory-_deps.kvikio-build-Debug-9ee5e1b90247ac726820.json  directory-_deps.kvikio-build.benchmarks-Debug-d80159708b4bfb4e9854.json  directory-_deps.nanoarrow-build-Debug-3738005156b91ef9d0bf.json  directory-_deps.nvtx3-build-Debug-82876e96eb66b1cb870e.json  directory-_deps.rapids-cmake-build-Debug-f89c84960a48bec911d7.json  directory-_deps.rapids_logger-build-Debug-53aa3ac3de1e12b984a6.json  directory-_deps.rmm-build-Debug-f421bc4e55608cfb104f.json  directory-_deps.spdlog-build-Debug-9ad7bacb7db1897b73e8.json  directory-_deps.zstd-build-Debug-43fb51a88572fed903e3.json  directory-_deps.zstd-build.lib-Debug-19aefe2b8bbfce9a4d3c.json  index-2025-06-04T01-21-07-0226.json  index-2025-06-04T02-27-09-0010.json  target-Continuous-Debug-c9c1010919d544f1a42a.json  target-ContinuousBuild-Debug-3a037194e0e002393a43.json  target-ContinuousConfigure-Debug-c8c3673249fb42d6265b.json  target-ContinuousCoverage-Debug-dd566788195773010399.json  target-ContinuousMemCheck-Debug-c3025894315c88146d84.json  target-ContinuousStart-Debug-c25d21eb9199dd47bc9e.json  target-ContinuousSubmit-Debug-f1442140ba8dea346c5f.json  target-ContinuousTest-Debug-6dca574261f33a0d2d3a.json  target-ContinuousUpdate-Debug-63b4729930f83ad47bf3.json  target-Experimental-Debug-bc01bb72be4a9db57f59.json  target-ExperimentalBuild-Debug-e49d397a40a2ed0e1f35.json  (+50 more)
CPM_modules/: FindCCCL.cmake  FindGTest.cmake  Findbenchmark.cmake  Findbs_thread_pool.cmake  Findcuco.cmake  Findcudf.cmake  Finddlpack.cmake  Findflatbuffers.cmake  Findjitify.cmake  Findkvikio.cmake  Findnanoarrow.cmake  Findnvtx3.cmake  Findrapids_logger.cmake  Findrmm.cmake  Findspdlog.cmake  Findzstd.cmake
cmake/find_modules/: FindDLPACK.cmake
include/: icu_lowercase.h  lemmatizer.h  lemmatizer_kernel.cuh  lemmatizer_kernel.h  structs.h  trie.h
rapids-cmake/cudf-exports/install/: package_nvcomp.cmake  package_rmm.cmake
rapids-cmake/kvikio-exports/install/: package_bs_thread_pool.cmake
rapids-cmake/patches/CCCL/: log  patch.cmake
rapids-cmake/rmm-exports/install/: package_rapids_logger.cmake
src/cuda/: GpuLemmatizer.cpp  bench_cpu.cpp  bench_gpu.cu  bench_gpu_bsearch.cu  bench_gpu_loop.cu  bench_gpu_opt.cu  bench_gpu_raw.cu  bench_gpu_stride.cu  bench_gpu_stride_loop.cu  bench_gpu_unified.cu  bench_gpu_unified_loop.cu  icu_lowercase.cpp  lemmatizer.cpp  lemmatizer_kernel.cu  main.cu  trie.cpp
